test/scc_test/stmt/semantic-errors/036.a
036.t:3:5: error: a break statement may only be used within a loop or switch